--- a/BP.tex
+++ b/BP.tex
@@ -38,10 +38,10 @@
 
 	\vspace{3.3cm}
 
-	\setstretch{1.75}\textbf{\huge Název práce česky název práce česky název práce česky název práce česky}
+	\setstretch{1.75}\textbf{\huge Hierarchické modely síťového provozu}
 	\vspace{1.1cm}
 
-	\textenglish{\textbf{\huge Title of the Work in English Title of the Work in English Title of the Work in English}}
+	\textenglish{\textbf{\huge Hierarchical models of network traffic}}
 	\vspace{1.7cm}
 
 	{\large Bakalářská práce}
@@ -53,9 +53,9 @@
 	\settowidth{\labelwidth}{MMMMMMMMM}
 	\setlength{\leftmargin}{\labelwidth}
 	\renewcommand{\makelabel}[1]{#1\hfil}}
-	\item [{Autor:}] \textbf{Jméno Autora}
-	\item [{Vedoucí práce:}] \textbf{prof. Ing. Jméno Školitele, DrSc.}
-	\item [{Konzultant:}] \textbf{doc. RNDr. Jméno Konzultanta, CSc. }(pouze pokud konzultant byl jmenován.)
+	\item [{Autor:}] \textbf{Marek Dědič}
+	\item [{Vedoucí práce:}] \textbf{Ing. Tomáš Pevný, Ph.D.}
+	\item [{Konzultant:}] \textbf{Mgr. Petr Somol, Ph.D.}
 	\item [{Akademický rok:}] 2016/2017
 \end{list}
 
@@ -81,10 +81,10 @@
 
 \noindent \textit{\Large Poděkování:}
 
-\noindent Chtěl bych zde poděkovat především svému školiteli ...................
+\noindent Chtěl bych zde poděkovat především svému školiteli, doktoru Tomáši Pevnému,
 za pečlivost, ochotu, vstřícnost a odborné i lidské zázemí při vedení
 mé diplomové práce. Dále děkuji svému konzultantovi ................
-za ................
+za ................ (???)
 
 \vfill
 
@@ -95,7 +95,7 @@ jsem všechnu použitou literaturu.
 
 \bigskip
 
-\noindent V Praze dne \documentdate\hfill Jméno Autora
+\noindent V Praze dne \documentdate\hfill Marek Dědič
 
 \vspace{2cm}
 
@@ -106,21 +106,16 @@ jsem všechnu použitou literaturu.
 \begin{onehalfspace}
 	\noindent \textit{Název práce:}
 
-	\noindent \textbf{Název práce}
+	\noindent \textbf{Hierarchické modely síťového provozu}
 \end{onehalfspace}
 
 \bigskip
 
-\noindent \textit{Autor:} Jméno Autora
+\noindent \textit{Autor:} Marek Dědič
 
 \bigskip
 
-\noindent \textit{Obor:} Celý název oboru (nikoliv zkratka)
-
-\bigskip
-
-\noindent \textit{Zaměření:} Celý název zaměření (Pokud obor neobsahuje
-zaměření, tuto řádku odstranit.)
+\noindent \textit{Obor:} Matematická informatika
 
 \bigskip
 
@@ -128,28 +123,15 @@ zaměření, tuto řádku odstranit.)
 
 \bigskip
 
-\noindent \textit{Vedoucí práce:} prof. Ing. Jméno Školitele, DrSc.,
-pracoviště školitele (název instituce, fakulty, katedry...)
+\noindent \textit{Vedoucí práce:} Ing. Tomáš Pevný, Ph.D., Cisco systems, Inc.
 
 \bigskip
 
-\noindent \textit{Konzultant:} doc. RNDr. Jméno Konzultanta, CSc., pracoviště
-konzultanta. Pouze pokud konzultant byl jmenován.
+\noindent \textit{Konzultant:} Mgr. Petr Somol, Ph.D., Cisco systems, Inc.
 
 \bigskip
 
-\noindent \textit{Abstrakt:} Abstrakt max. na 10 řádků. Abstrakt max.
-na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků.
-Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max.
-na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků.
-Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max.
-na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků.
-Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max.
-na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků.
-Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max.
-na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků.
-Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max.
-na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. 
+\noindent \textit{Abstrakt:} Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. Abstrakt max. na 10 řádků. 
 
 \bigskip
 
@@ -162,30 +144,16 @@ podle abecedy a oddělená čárkou
 	\begin{onehalfspace}
 		\noindent \textit{Title:}
 
-		\noindent \textbf{Title of the Work}
+		\noindent \textbf{Hierarchical models of network traffic}
 	\end{onehalfspace}
 
 	\bigskip
 
-	\noindent \textit{Author:} Author's Name
+	\noindent \textit{Author:} Marek Dědič
 
 	\bigskip
 
-	\noindent \textit{Abstract:} Max. 10 lines of English abstract text.
-	Max. 10 lines of English abstract text. Max. 10 lines of English abstract
-	text. Max. 10 lines of English abstract text. Max. 10 lines of English
-	abstract text. Max. 10 lines of English abstract text. Max. 10 lines
-	of English abstract text. Max. 10 lines of English abstract text.
-	Max. 10 lines of English abstract text. Max. 10 lines of English abstract
-	text. Max. 10 lines of English abstract text. Max. 10 lines of English
-	abstract text. Max. 10 lines of English abstract text. Max. 10 lines
-	of English abstract text. Max. 10 lines of English abstract text.
-	Max. 10 lines of English abstract text. Max. 10 lines \cite{Allen-Cahn} of English abstract
-	text. Max. 10 lines of English abstract text. Max. 10 lines of English
-	abstract text. Max. 10 lines of English abstract text. Max. 10 lines
-	of English abstract text. Max. 10 lines of English abstract text.
-	Max. 10 lines of English abstract text. Max. 10 lines of English abstract
-	text. Max. 10 lines of English abstract text.
+	\noindent \textit{Abstract:} Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text. Max. 10 lines of English abstract text.
 
 	\bigskip
 
