--- a/BP.tex
+++ b/BP.tex
@@ -16,7 +16,7 @@
 \setotherlanguage{english}
 \setmainfont{TeX Gyre Termes}
 \setcounter{secnumdepth}{3}
-\addbibresource{test.bib}
+\addbibresource{zotero.bib}
 
 \begin{document}
 \def\documentdate{7. července 2017}
