Commented out unnecessary parts for now

--- a/BP.tex
+++ b/BP.tex
@@ -5,39 +5,39 @@
 
 \pagestyle{empty}
 
-\input{titlepage.tex}
+%\input{titlepage.tex}
 
 \cleardoublepage
 
-\null\vfill
-\begin{center}
-	- Zadání práce -
-\par\end{center}
-\vfill
+%\null\vfill
+%\begin{center}
+	%- Zadání práce -
+%\end{center}
+%\vfill
 
-\newpage
+%\newpage
 
-\null\vfill
-\begin{center}
-	- Zadání práce (zadní strana) -
-\par\end{center}
-\vfill
-
-\cleardoublepage
-
-\input{acknowledgment.tex}
+%\null\vfill
+%\begin{center}
+	%- Zadání práce (zadní strana) -
+%\end{center}
+%\vfill
 
 \cleardoublepage
 
-\input{abstract.tex}
+%\input{acknowledgment.tex}
+
+\cleardoublepage
+
+%\input{abstract.tex}
 
 \cleardoublepage
 
 \pagestyle{plain}
 
-\tableofcontents
+%\tableofcontents
 
-\input{introduction.tex}
+%\input{introduction.tex}
 
 \pagestyle{headings}
 
@@ -45,9 +45,9 @@
 
 \pagestyle{plain}
 
-\input{conclusion.tex}
+%\input{conclusion.tex}
 
 \nocite{*}
-\printbibliography[title=Literatura]
+%\printbibliography[title=Literatura]
 
 \end{document}
