Added MIL basics

--- a/BP.tex
+++ b/BP.tex
@@ -41,13 +41,13 @@
 
 \pagestyle{headings}
 
-\chapter{Název první kapitoly}
+\input{MIL.tex}
 
 \pagestyle{plain}
 
 %\input{conclusion.tex}
 
-\nocite{*}
-%\printbibliography[title=Literatura]
+%\nocite{*}
+\printbibliography[title=Literatura]
 
 \end{document}
