--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,7 @@
 \usepackage{csquotes}
 \usepackage{geometry}
 \usepackage[intlimits]{amsmath}
+\usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage{indentfirst}
 \usepackage{url}
@@ -17,3 +18,6 @@
 \setmainfont{TeX Gyre Termes}
 \setcounter{secnumdepth}{3}
 \addbibresource{zotero.bib}
+
+\newcommand{\BPspace}{\mathcal}
+\newcommand{\BPvec}{\vec}
