--- a/zotero.bib
+++ b/zotero.bib
@@ -136,3 +136,21 @@
 	keywords = {Computer Science - Cryptography and Security},
 	file = {arXiv\:1607.01639 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/XPUFNA7I/Anderson et al. - 2016 - Deciphering Malware's use of TLS (without Decrypti.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/Q6K7FQHI/1607.html:text/html}
 }
+
+@article{dietterich_solving_1997,
+	title = {Solving the multiple instance problem with axis-parallel rectangles},
+	volume = {89},
+	issn = {0004-3702},
+	url = {http://www.sciencedirect.com/science/article/pii/S0004370296000343},
+	doi = {10.1016/S0004-3702(96)00034-3},
+	abstract = {The multiple instance problem arises in tasks where the training examples are ambiguous: a single example object may have many alternative feature vectors (instances) that describe it, and yet only one of those feature vectors may be responsible for the observed classification of the object. This paper describes and compares three kinds of algorithms that learn axis-parallel rectangles to solve the multiple instance problem. Algorithms that ignore the multiple instance problem perform very poorly. An algorithm that directly confronts the multiple instance problem (by attempting to identify which feature vectors are responsible for the observed classifications) performs best, giving 89\% correct predictions on a musk odor prediction task. The paper also illustrates the use of artificial data to debug and compare these algorithms.},
+	pages = {31--71},
+	number = {1},
+	journaltitle = {Artificial Intelligence},
+	shortjournal = {Artificial Intelligence},
+	author = {Dietterich, Thomas G. and Lathrop, Richard H. and Lozano-Pérez, Tomás},
+	urldate = {2017-05-31},
+	date = {1997-01-01},
+	keywords = {Drug design, Machine learning, Structure-activity relationships},
+	file = {ScienceDirect Full Text PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/8TARSUSR/Dietterich et al. - 1997 - Solving the multiple instance problem with axis-pa.pdf:application/pdf;ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/PSIMP84K/S0004370296000343.html:text/html}
+}
