--- a/MIL.tex
+++ b/MIL.tex
@@ -38,4 +38,4 @@ Zvolíme \( k : \BPspace X \to \BPspace X \) a \( g : \bigcup_{k = 1}^{\infty} \
 \begin{equation}
 	\phi : \BPspace B \to \BPspace X : b \mapsto g \left( \left\{ k \left( x \right) \middle| x \in b \right\} \right)
 \end{equation}
-Za \( g \) volíme například funkce minimum, maximum, aritmetický průměr. Funkci \( k \) potom hledámealgoritmem pro učení s učitelem. FIGURE. Tedy trénujeme zároveň neuronovou síť určující funkci \( f \) a funkci \( k \).
+Za \( g \) volíme například funkce minimum, maximum, aritmetický průměr. Funkci \( k \) potom hledámealgoritmem pro učení s učitelem. \todo{figure from \cite{pevny_using_2016}}Tedy trénujeme zároveň neuronovou síť určující funkci \( f \) a funkci \( k \).
